src/objects/AP_Process_Form__c.object
<CustomObject>
    <description>Used for Airline participation process to save the BSP/CASS Form.</description>
    <fields>
        <fullName>ANG_Airline_accepts_EasyPay_tr_in_BSP__c</fullName>
        <description>Defines if an airline will accept EasyPay transactions in the BSP settlement.</description>
        <inlineHelpText>Will you accept EasyPay transactions in the BSP settlement?</inlineHelpText>
        <label>Airline accepts EasyPay trans. in BSP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ANG_Enable_NewGen__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the country Nam Enabled?</description>
        <label>New Accr. Model &amp; Risk Events enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AP_BR_Address_CNP__c</fullName>
        <inlineHelpText>The CNPJ # must correspond with the address to be inserted in IATA Systems</inlineHelpText>
        <label>CNPJ Address corresponds</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AP_BR_Address_To_Insert__c</fullName>
        <inlineHelpText>The CNPJ # must correspond with the address to be inserted in IATA Systems</inlineHelpText>
        <label>CNPJ Address To Insert</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AP_BR_BankBeneficiary_Account_Holder__c</fullName>
        <inlineHelpText>Does the CNPJ# provided above correspond with the Bank Beneficiary Account Holder?</inlineHelpText>
        <label>CNPJ is Bank Beneficiary Acnt Holder</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accept_Disclaimer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Filled by the user to accept disclaimer for ICH form</description>
        <label>Accept Disclaimer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accept_Online_Corrections__c</fullName>
        <description>Field used in the PASS Airline Online Process form</description>
        <label>Accept Online Corrections</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accept_payment_Cards_for_BSP_ticket__c</fullName>
        <description>Does your Airline accept Payment Cards for BSP ticket issuance by Travel Agents?</description>
        <inlineHelpText>Does your Airline accept Payment Cards for BSP ticket issuance by Travel Agents?</inlineHelpText>
        <label>Accept payment Cards for BSP ticket</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accept_terms_and_conditions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accept terms and conditions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Airline_Billing_Data_File_Type__c</fullName>
        <label>Airline Billing Data File Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Airline Head Office System</fullName>
                </value>
                <value>
                    <fullName>Airline Local Office System</fullName>
                </value>
                <value>
                    <fullName>IATA AWB Data Capture software is required</fullName>
                </value>
                <value>
                    <fullName>Upload by your Airline&apos;s GSSA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Airline_HO__c</fullName>
        <description>Airline Registered Head Office Address</description>
        <inlineHelpText>Airline Registered Head Office Address</inlineHelpText>
        <label>Airline HO Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Airline_Intra_Europe_Flights__c</fullName>
        <label>Airline Intra-Europe Flights</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Airline_Invoice_Address__c</fullName>
        <label>Airline Invoice Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Airline_Local_address_in_the_BSP_Country__c</fullName>
        <label>Airline Local address in the BSP Country</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Airline_Registered_under_other_name__c</fullName>
        <label>Airline Registered under other name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Airline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AP Process Forms</relationshipLabel>
        <relationshipName>AP_Process_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Airline_s_Fiscal_Status__c</fullName>
        <label>Airline&apos;s Fiscal Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard (Ordinario)</fullName>
                </value>
                <value>
                    <fullName>Special (Contribuente Especial)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Airline_trade_name__c</fullName>
        <label>Airline trade name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Airline_wish_to_join_ICCS__c</fullName>
        <description>Does your Airline wish to join ICCS (IATA Currency Clearance Service) in this market, if available?

If YES, please coordinate directly with ICCS through info.iccs@iata.org.

Please ensure the ICCS documents are submitted directly to ICCS Geneva.

Note that the joining process will only start once the ICCS agreement is countersigned by IATA.
For more information on ICCS go to www.iata.org/iccs

If NO, please submit a Local Bank Account in the BSP country and currency (refer to next item).</description>
        <label>Airline wish to join ICCS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>American_Express_Merchant_Number__c</fullName>
        <label>American Express Merchant Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>American_Express_Name_of_Acquirer__c</fullName>
        <label>American Express Name of Acquirer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_billing__c</fullName>
        <description>Used for SIS recordtypes</description>
        <label>Auto-billing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSPLink_ASD_China_Contact_Email__c</fullName>
        <description>BSPLink/ASD( for China) Contact Person</description>
        <label>BSPLink/ASD China Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BSPLink_ASD_China_Contact_L_Name__c</fullName>
        <description>BSPLink/ASD( for China) Contact Person</description>
        <label>BSPLink/ASD China Contact L. Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BSPLink_ASD_China_Contact_Phone__c</fullName>
        <description>BSPLink/ASD( for China) Contact Person</description>
        <label>BSPLink/ASD China Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BSPLink_ASD_China_Contact__c</fullName>
        <description>BSPLink/ASD( for China) Contact Person</description>
        <label>BSPLink/ASD China Contact F. Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BSPLink_access_level_requested__c</fullName>
        <description>What BSPlink access level does your Airline require?</description>
        <label>BSPLink access level requested</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Enhanced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSP_Country_VAT_Tax_number__c</fullName>
        <description>VAT/Tax number in the BSP Country of application
(Only if applicable: Please refer to Country requirements)</description>
        <inlineHelpText>Only if applicable: Please refer to Country requirements.</inlineHelpText>
        <label>BSP Country VAT/Tax number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BSP_Local_City__c</fullName>
        <label>BSP Local City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BSP_Local_Zip_Code__c</fullName>
        <description>Airline Local address in the BSP Country of application
(Only if applicable. Please refer to Country Specifics)</description>
        <label>BSP Local Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BSP_Local_address__c</fullName>
        <description>Airline Local address in the BSP Country of application
(Only if applicable. Please refer to Country Specifics)</description>
        <inlineHelpText>Airline Local address in the BSP Country of application
(Only if applicable. Please refer to Country Specifics)</inlineHelpText>
        <label>BSP Local address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BSP_Russia_Double_Tax_avoiding_Treaty__c</fullName>
        <label>BSP Russia Double Tax avoiding Treaty</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSP_UA_BankCode_MFO__c</fullName>
        <description>Bank Code for BSP Ukraine</description>
        <label>BSP UA BankCode MFO</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BSP_UA_LocalReg_Number_EDRPOU__c</fullName>
        <description>Beneficiary Registration Code/ Local Registration Number (EDRPOU) for BSP Ukraine</description>
        <label>BSP UA LocalReg Number EDRPOU</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_File_Emrgcy_Contact_Email__c</fullName>
        <label>Billing File Emrgcy Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Billing_File_Emrgcy_Contact_F_Name__c</fullName>
        <label>Billing File Emrgcy Contact F Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_File_Emrgcy_Contact_Job_Title__c</fullName>
        <label>Billing File Emrgcy Contact Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_File_Emrgcy_Contact_L_Name__c</fullName>
        <label>Billing File Emrgcy Contact L Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_File_Emrgcy_Contact_Number__c</fullName>
        <description>Contact Person details, phone number</description>
        <label>Billing File Emrgcy Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Billing_File_Emrgcy_Contact_Salutation__c</fullName>
        <label>Billing File Emrgcy Contact Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr</fullName>
                </value>
                <value>
                    <fullName>Mrs</fullName>
                </value>
                <value>
                    <fullName>Ms</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Value_Confirmation__c</fullName>
        <description>Used for SIS recordtypes</description>
        <label>Billing Value Confirmation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Value_Determination__c</fullName>
        <description>Used for SIS recordtypes</description>
        <label>Billing Value Determination</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CASSLink_Contact_Email__c</fullName>
        <label>CASSLink Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CASSLink_Contact_F_Name__c</fullName>
        <label>CASSLink Contact F Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CASSLink_Contact_Fax__c</fullName>
        <label>CASSLink Contact Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CASSLink_Contact_Job_Title__c</fullName>
        <label>CASSLink Contact Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CASSLink_Contact_L_Name__c</fullName>
        <label>CASSLink Contact L Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CASSLink_Contact_Phone__c</fullName>
        <label>CASSLink Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CASSLink_Contact_Salutation__c</fullName>
        <label>CASSLink Contact Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr</fullName>
                </value>
                <value>
                    <fullName>Mrs</fullName>
                </value>
                <value>
                    <fullName>Ms</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CASSLink_Extra_Existing_Users__c</fullName>
        <label>CASSLink Extra Existing Users</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CASSLink_Extra_New_Users__c</fullName>
        <inlineHelpText>For PASS, create this users with Job Title PASS Admin</inlineHelpText>
        <label>CASSLink Extra New Users</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CASSLink_New_User_1_Email__c</fullName>
        <label>CASSLink New User 1 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CASSLink_New_User_1_F_Name__c</fullName>
        <label>CASSLink New User 1 F Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CASSLink_New_User_1_L_Name__c</fullName>
        <label>CASSLink New User 1 L Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CASSLink_New_User_1_Salutation__c</fullName>
        <label>CASSLink New User 1 Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr</fullName>
                </value>
                <value>
                    <fullName>Mrs</fullName>
                </value>
                <value>
                    <fullName>Ms</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CASSLink_New_User_1_System_Functions__c</fullName>
        <label>CASSLink New User 1 System Functions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>View Input</fullName>
                </value>
                <value>
                    <fullName>Add Input</fullName>
                </value>
                <value>
                    <fullName>Output Airlines</fullName>
                </value>
                <value>
                    <fullName>View Corrections</fullName>
                </value>
                <value>
                    <fullName>Add Corrections</fullName>
                </value>
                <value>
                    <fullName>Approve Corrections</fullName>
                </value>
                <value>
                    <fullName>Stock Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CASSLink_New_User_2_Email__c</fullName>
        <label>CASSLink New User 2 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CASSLink_New_User_2_F_Name__c</fullName>
        <label>CASSLink New User 2 F Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CASSLink_New_User_2_L_Name__c</fullName>
        <label>CASSLink New User 2 L Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CASSLink_New_User_2_Salutation__c</fullName>
        <label>CASSLink New User 2 Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr</fullName>
                </value>
                <value>
                    <fullName>Mrs</fullName>
                </value>
                <value>
                    <fullName>Ms</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CASSLink_New_User_2_System_Functions__c</fullName>
        <label>CASSLink New User 2 System Functions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>View Input</fullName>
                </value>
                <value>
                    <fullName>Add Input</fullName>
                </value>
                <value>
                    <fullName>Output Airlines</fullName>
                </value>
                <value>
                    <fullName>View Corrections</fullName>
                </value>
                <value>
                    <fullName>Add Corrections</fullName>
                </value>
                <value>
                    <fullName>Approve Corrections</fullName>
                </value>
                <value>
                    <fullName>Stock Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CASSLink_New_User_3_Email__c</fullName>
        <label>CASSLink New User 3 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CASSLink_New_User_3_F_Name__c</fullName>
        <label>CASSLink New User 3 F Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CASSLink_New_User_3_L_Name__c</fullName>
        <label>CASSLink New User 3 L Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CASSLink_New_User_3_Salutation__c</fullName>
        <label>CASSLink New User 3 Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr</fullName>
                </value>
                <value>
                    <fullName>Mrs</fullName>
                </value>
                <value>
                    <fullName>Ms</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CASSLink_New_User_3_System_Functions__c</fullName>
        <label>CASSLink New User 3 System Functions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>View Input</fullName>
                </value>
                <value>
                    <fullName>Add Input</fullName>
                </value>
                <value>
                    <fullName>Output Airlines</fullName>
                </value>
                <value>
                    <fullName>View Corrections</fullName>
                </value>
                <value>
                    <fullName>Add Corrections</fullName>
                </value>
                <value>
                    <fullName>Approve Corrections</fullName>
                </value>
                <value>
                    <fullName>Stock Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CASSLink_User_1_System_Functions__c</fullName>
        <label>CASSLink User 1 System Functions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>View Input</fullName>
                </value>
                <value>
                    <fullName>Add Input</fullName>
                </value>
                <value>
                    <fullName>Output Airlines</fullName>
                </value>
                <value>
                    <fullName>View Corrections</fullName>
                </value>
                <value>
                    <fullName>Add Corrections</fullName>
                </value>
                <value>
                    <fullName>Approve Corrections</fullName>
                </value>
                <value>
                    <fullName>Stock Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CASSLink_User_2_System_Functions__c</fullName>
        <label>CASSLink User 2 System Functions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>View Input</fullName>
                </value>
                <value>
                    <fullName>Add Input</fullName>
                </value>
                <value>
                    <fullName>Output Airlines</fullName>
                </value>
                <value>
                    <fullName>View Corrections</fullName>
                </value>
                <value>
                    <fullName>Add Corrections</fullName>
                </value>
                <value>
                    <fullName>Approve Corrections</fullName>
                </value>
                <value>
                    <fullName>Stock Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CASSLink_User_3_System_Functions__c</fullName>
        <label>CASSLink User 3 System Functions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>View Input</fullName>
                </value>
                <value>
                    <fullName>Add Input</fullName>
                </value>
                <value>
                    <fullName>Output Airlines</fullName>
                </value>
                <value>
                    <fullName>View Corrections</fullName>
                </value>
                <value>
                    <fullName>Add Corrections</fullName>
                </value>
                <value>
                    <fullName>Approve Corrections</fullName>
                </value>
                <value>
                    <fullName>Stock Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CASSLink_Username_1__c</fullName>
        <label>CASSLink Username 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CASSLink_Username_2__c</fullName>
        <label>CASSLink Username 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CASSLink_Username_3__c</fullName>
        <label>CASSLink Username 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CASS_Ad_Hoc_Bulletins_Email_1__c</fullName>
        <label>CASS Ad Hoc Bulletins Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CASS_Ad_Hoc_Bulletins_Email_2__c</fullName>
        <label>CASS Ad Hoc Bulletins Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CASS_Corrections_Email_1__c</fullName>
        <label>CASS Corrections Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CASS_Corrections_Email_2__c</fullName>
        <label>CASS Corrections Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CASS_Corrections_Email_3__c</fullName>
        <label>CASS Corrections Email 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CASS_Defaults_Email_1__c</fullName>
        <label>CASS Defaults Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CASS_Defaults_Email_2__c</fullName>
        <label>CASS Defaults Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CASS_Operation__c</fullName>
        <label>CASS Operation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Import</fullName>
                </value>
                <value>
                    <fullName>Export</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CASS_PH_Bilat_Agreement_Tax_Rate__c</fullName>
        <label>CASS PH Bilat. Agreement Tax Rate</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CASS_PH_Bilateral_Agreement__c</fullName>
        <label>CASS PH Bilateral Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CASS_PH_Preferred_Billing_Currency__c</fullName>
        <label>CASS PH Preferred Billing Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>PHP</fullName>
                </value>
                <value>
                    <fullName>USD and PHP (2 separate billing files to be prepared by Airline)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Canada_Has_Principal_Office__c</fullName>
        <label>Canada Has Principal Office</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Canada_LocalVAT_Info__c</fullName>
        <label>Canada Local VAT Info</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Canada_Provincial_Offices__c</fullName>
        <label>Canada Provincial Offices</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALBERTA (AB): GST</fullName>
                </value>
                <value>
                    <fullName>BRITISH COLUMBIA (BC): GST</fullName>
                </value>
                <value>
                    <fullName>MANITOBA (MB): GST</fullName>
                </value>
                <value>
                    <fullName>NEW BRUNSWICK (NB): HST</fullName>
                </value>
                <value>
                    <fullName>NEWFOUNDLAND &amp; LABRADOR (NL): HST</fullName>
                </value>
                <value>
                    <fullName>NORTHWEST TERRITORIES (NW): GST</fullName>
                </value>
                <value>
                    <fullName>NOVA SCOTIA (NS): HST</fullName>
                </value>
                <value>
                    <fullName>ONTARIO (ON): HST</fullName>
                </value>
                <value>
                    <fullName>PRINCE EDWARD ISLAND (PE): HST</fullName>
                </value>
                <value>
                    <fullName>QUEBEC (QC): GST QST</fullName>
                </value>
                <value>
                    <fullName>SASKATCHEWAN (SK): GST</fullName>
                </value>
                <value>
                    <fullName>NUNAVUT (NT): GST</fullName>
                </value>
                <value>
                    <fullName>YUKON (YK): GST</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Capital_amount_of_the_business__c</fullName>
        <label>Capital amount of the business</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Card_brand_accepted_for_BSP_ticket__c</fullName>
        <description>Which Card brand does your Airline accept for BSP ticket issuance by Travel Agents?</description>
        <label>Card brand accepted for BSP ticket</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visa (VI)</fullName>
                </value>
                <value>
                    <fullName>American Express (AX)</fullName>
                </value>
                <value>
                    <fullName>UATP (TP)</fullName>
                </value>
                <value>
                    <fullName>Diners (DC)</fullName>
                </value>
                <value>
                    <fullName>MasterCard (CA)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CargoLink_Address__c</fullName>
        <description>HQ address unless Premium</description>
        <label>CargoLink Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CargoLink_Airline_Name__c</fullName>
        <label>CargoLink Airline Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>